Snapshot ea0764a9e9

* #4662 Add the 'source' property to the model. (marco)
* #4558 Correctly encode characters in URI. (tomeu)

Snapshot a42f40d575

* #4784 Use valid FAT names when saving entries to usb sticks. (tomeu)

Snapshot 6d3d607ec7

* #4783 Try harder to guess the file extension. (tomeu)
* #4796 Ignore failure to chmod files in usb sticks. (tomeu)

Snapshot 62a5c30d81

* Copy files to the profile dir when asked by an out-of-container process. (tomeu)

Snapshot 3b70954e71

* #3801 Check out files in the activity instance dir with the correct
  permissions. (tomeu)
* #4704 Fix copy of entries with file to removable devices. (tomeu)
* #4714 Fix copy of entries without file to removable devices. (tomeu)

Snapshot 74cbc13878

* #4654 Hard link files on check out instead of copying if possible. (tomeu)

Snapshot 2b5596554c

* #4234 Fix copying a download to an usb stick. (marco)

Snapshot fa80f025af

* #4083: Remove the active loop and initialize threads. (tomeu)
* #4182: Flush every 20 changes or 1 minute after the last unflushed change. (tomeu)

Snapshot 5051fc3a4b

Snapshot 26a372063c

* Revert API changes which was breaking activities (tomeu)

Snapshot 7072db5ffd

* #3768 Fix copy of clipboard objects to usb stick (marco)
* #4235: Keep indexing an usb stick after an error in a single file. (tomeu)

Snapshot 89ae26ced4

* Improved mime type handling. (marco)

Snapshot cb0acdf653

* Support for external properties. (bcsaller)
* Better logging. (marco)

Snapshot b603f340b2

* Request binary data as dbus.ByteArray. (tomeu)

Snapshot 23becaa683

* Don't mount automatically at start. (tomeu)
* Exit cleanly when dbus goes down. (marco)

Snapshot 64abebe398

* Do not index binaries. (bcsaller)
* Really fix offset. (bcsaller)

Snapshot 87204de5b9

* Offset support. (bcsaller)
* #3180: Recreate the index on mount failure of only removable devices. (tomeu)

Snapshot dce9c18d56

* #3469 Human readable names on USB. (marco)

Snapshot 11013dc3ca
