@@ -399,6 +399,5 @@ defaultModel = Model().addFields(
     ('icon-color', 'string'),
     ('preview', 'external'),
     ('buddies', 'text'),
-    ('source', 'text'),
     )
 
