@@ -1,3 +1,5 @@
+* #4662 Correctly fix properties not in the model. (tomeu)
+
 Snapshot ea0764a9e9
 
 * #4662 Add the 'source' property to the model. (marco)
